[tool.poetry]
name = "SPADE"
version = "1.0.0"
description = "Synthetic data generation."
authors = ["Dimitris Zermas"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "<=1.22.0"
torch = "=1.12.1"
torchvision = "=0.13.1"
torchmetrics = "=0.8.2"
dominate = ">=2.3.1"
dill = "*"
scikit-image = "*"
pytorch-lightning = "=1.7.7"
# aws_utils = {git = "ssh://git@github.com/SenteraLLC/py-aws-utils.git", tag = "v3.3.2"}

[tool.poetry.dev-dependencies]
pytest = "=7.0.0"
pre_commit = "=2.17.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"